# rsml

./: .vim.lua  Cargo.toml  README.md  test.html  test.js
.github/workflows/: static.yml
examples/: cubes_and_camera.rs  font_rendering.rs  font_texture_atlas.rs  game_of_life.rs  page.html  scene_3d.rs  text_rendering.rs
pkg/: cubes_and_camera.d.ts  cubes_and_camera.js  cubes_and_camera_bg.wasm.d.ts
src/: error.rs  lib.rs  main.rs
src/app/: app.rs  default_color_shader.wgsl  default_texture_shader.wgsl  mod.rs  renderer.rs  window_manager.rs
src/drawable/: default_render_pipeline.rs  default_shader.wgsl  default_text_shader.wgsl  drawable.rs  font.rs  mod.rs  text.rs  texture.rs  vertex_buffer.rs
src/renderer/: camera.rs  default_color_shader.wgsl  default_texture_shader.wgsl  mod.rs  render_target.rs  renderer.rs  uniform.rs
src/window/: camera_controller.rs  frame_monitor.rs  mod.rs  render_target.rs  window.rs
