[package]
name = "rsml"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
wgpu = "29.0.1"
winit = { version = "0.30" }
pollster = "0.4"
bytemuck = "1.25.0"
cgmath = "0.18"
rand = "0.10.1"
fontdue = "0.9.3"


[dependencies.image]
version = "0.25.10"
default-features = false
features = ["png", "jpeg"]
