[package]
name = "rsml"
version = "0.1.0"
edition = "2024"


[dependencies]
thiserror = "2"
wgpu = "29.0.1"
winit = { version = "0.30", features = ["android-native-activity"] }
pollster = "0.4"
bytemuck = "1.25.0"
cgmath = "0.18"
rand = "0.10.1"
fontdue = "0.9.3"
env_logger = "0.10"
once_cell = "1.21.4"


[dependencies.image]
version = "0.25.10"
default-features = false
features = ["png", "jpeg"]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
log = "0.4"
console_log = "1.0"
wgpu = { version = "29.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
web-sys = { version = "0.3.95", features = [
    "Document",
    "Window",
    "Element"
]}
